# crewai_flow_feedback_tutorial

./: README.MD  requirements.txt
twitter_self_evaluation/: README.md  crewai_flow.html  pyproject.toml  x_post.txt
twitter_self_evaluation/src/twitter_self_evaluation/: main.py
twitter_self_evaluation/src/twitter_self_evaluation/crews/shakespeare_crew/: shakespeare_crew.py
twitter_self_evaluation/src/twitter_self_evaluation/crews/shakespeare_crew/config/: agents.yaml  tasks.yaml
twitter_self_evaluation/src/twitter_self_evaluation/crews/shakesphere_crew/: shakesphere_crew.py
twitter_self_evaluation/src/twitter_self_evaluation/crews/x_post_review_crew/: x_post_review_crew.py
twitter_self_evaluation/src/twitter_self_evaluation/crews/x_post_review_crew/config/: agents.yaml  tasks.yaml
twitter_self_evaluation/src/twitter_self_evaluation/tools/: CharacterCounterTool.py
